MS deal  - добавлены тесты для слоя сервисов